syntax = "proto3";
package booking;

option go_package = "./;pb";

import "google/protobuf/timestamp.proto";

import "customer.proto";
import "flight.proto";

service SEOLEBooking{
    rpc CreateBooking(BookingRequest) returns (BookingResponse);
    rpc FindBooking(BookingCode) returns (BookingInfo);
    rpc CancelBooking(BookingCode) returns (BookingInfo);
    rpc BookingHistory(CustomerID) returns (ListBookingReponse);
};


message BookingRequest {
    string id = 1; 
    string slut = 2;
    CustomerRequest customer = 3;
    FlightRequest flight = 4; 
}


message BookingInfo { 
    string id = 1; 
    CustomerResponse customer = 2;
    FlightResponse flight = 3; 
    int64 code = 4; 
    string status = 5;
    google.protobuf.Timestamp booked_date = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message BookingResponse {
    string id = 1; 
    int64 customer_id = 2;
    int64 flight_id = 3; 
    int64 code = 4; 
    string status = 5;
    string booked_date = 6;
}

message BookingCode {
    string code = 1;
}

message ListBookingReponse {
    repeated BookingInfo bookings = 1 ;
}